--- a/src/main/resources/static/error/404.html
+++ b/src/main/resources/static/error/404.html
@@ -1,10 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-    Not found
-</body>
-</html>
+<title>404</title>
+<div style=height:100vh;text-align:center;display:flex;flex-direction:column;align-items:center;justify-content:center>
+    <div style=line-height:48px;height:48px>
+        <style>@media (prefers-color-scheme: light) {
+            body {
+                color: #000;
+                background: #fff;
+                margin: 0
+            }
+        }
+
+        @media (prefers-color-scheme: dark) {
+            body {
+                color: #fff;
+                background: #000;
+                margin: 0
+            }
+        }</style>
+        <h1 style="display:inline-block;margin:0 20px 0 0;padding-right:22px;font-size:24px;font-weight:500;vertical-align:top;border-right:1px solid #808080">
+            404</h1>
+        <h2 style="display:inline-block;margin:10px 0 10px 0;font-size:16px;font-weight:400;line-height:28px;vertical-align:top">
+            Page Not Found.</h2></div>
+</div>
