--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Index page</title>
+    <link rel="stylesheet" href="/css/global.css">
 </head>
 <body>
-    <h1>
-        Index page
-    </h1>
+<h1>
+    Index page
+</h1>
 </body>
 </html>
